# face_det_age_gender

./: pyproject.toml
Results/: image1_result.csv  image2_result.csv  image4_results.csv
