[project]
name = "face-detection-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepface>=0.0.93",
    "dlib>=19.24.6",
    "fastapi>=0.115.12",
    "matplotlib>=3.10.1",
    "model",
    "opencv-python>=4.11.0.86",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "tf-keras>=2.19.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "face-detection-api",
]

[tool.uv.sources]
face-detection-api = { workspace = true }
